fixing form alignment

--- a/app/assets/stylesheets/layouts/team_page_reskin_final.scss
+++ b/app/assets/stylesheets/layouts/team_page_reskin_final.scss
@@ -225,83 +225,6 @@
     }
   }
 
-  form {
-    textarea {
-      width: 50%;
-      height: 5em;
-    }
-
-    select {
-      width: 50%;
-      padding: 0.5em;
-    }
-
-    div {
-      box-sizing: border-box;
-      width: 50%;
-      padding-right: 1em;
-      text-align: right;
-      font-size: 1.15em;
-
-      em {
-        font-size: 0.85em;
-      }
-
-      &.actions {
-        display: flex;
-        justify-content: center;
-        margin-top: 1em;
-        margin-bottom: 1em;
-
-        input {
-          box-sizing: border-box;
-          font-size: 1.5em;
-          padding: 0.5em 1.5em;
-          -webkit-appearance: none;
-          -moz-appearance: none;
-          appearance: none;
-          background-color: #ca1e56;
-          color: #ddd;
-          font-weight: 700;
-          text-transform: uppercase;
-        }
-      }
-
-      &.field {
-        display: flex;
-        padding: 0.5em 0em;
-        align-items: center;
-        text-align: left !important;
-
-        >label {
-          box-sizing: border-box;
-          width: 50%;
-          padding-right: 1em;
-          text-align: right;
-          font-size: 1.15em;
-        }
-
-        >input {
-          box-sizing: border-box;
-          width: 50%;
-          padding-left: 1em;
-          font-size: 1em;
-          padding: 0.5em;
-          display: flex;
-        }
-
-        >div.field_with_errors>input {
-          padding-left: 1em;
-          font-size: 1em;
-          padding: 0.5em;
-          display: flex;
-          width: 100%;
-          border: 1px solid #C00;
-        }
-      }
-    }
-  }
-
   #hiddendescription {
     box-sizing: border-box;
     width: 50%;
